fixes small bug (a footer overlapping a button)

--- a/main.scss
+++ b/main.scss
@@ -71,7 +71,7 @@ button {
 	padding-top: 0;
 	font-weight: normal; 
 	color: $yellow;
-	height: 500px; 
+	min-height: 700px; 
 }
 
 /*toggle */
@@ -81,9 +81,11 @@ button {
 }
 
 .footer {
-    padding-top: 100px; 
     display: block; 
     position: relative;
     bottom: 0; 
 	line-height: 1px; 
+	margin-bottom: 0;
+	padding-bottom: 0; 
+	font-size: 10px; 
 }
